--- a/index.html
+++ b/index.html
@@ -21,21 +21,29 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-      body {
+      *{
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
+      }
+      html{
+        font-size: 62.5%;
+      }
+      body {
+        padding: 1rem;
+        min-height: 100vh;
         font-family: outfit;
         font-size: 15px;
-        box-sizing: border-box;
         background-color: hsl(212, 45%, 89%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
-      figure {
-        margin: 80px auto;
+      article {
         background-color: hsl(0, 0%, 100%);
         text-align: center;
-        width: 275px;
-        height: 450px;
-        padding: 15px;
+        max-width: 27.5rem;
+        padding: 1.5rem;
         border-radius: 10px;
       }
 
@@ -43,7 +51,7 @@
         width: 100%;
         border-radius: 10px;
       }
-      figcaption {
+      section {
         padding: 5px;
       }
       h2 {
@@ -64,24 +72,25 @@
     </style>
   </head>
   <body>
-    <figure>
-      <div class="img-box">
+    <main>
+      
+    <article aria-label="Frontend Mentor">
         <img src="images/image-qr-code.png" alt="QR-Code" />
-      </div>
-      <figcaption>
+      <section>
         <h2>Improve your front-end skills by building projects</h2>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
-      </figcaption>
-    </figure>
+      </section>
+    </article>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a href="https://www.frontendmentor.io/solutions/static-website-containing-qr-code-09_I2-wV2z#comment-67729f1722981630774af4f1" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Abdulsamad Adeniyi</a>.
-    </div>
+    </footer>
   </body>
 </html>
