--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -74,7 +73,7 @@
   <body>
     <main>
       
-    <article aria-label="Frontend Mentor">
+    <article aria-label="Frontend Mentor" role="main">
         <img src="images/image-qr-code.png" alt="QR-Code" />
       <section>
         <h2>Improve your front-end skills by building projects</h2>
