--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
       }
       article {
         background-color: hsl(0, 0%, 100%);
