--- a/index.html
+++ b/index.html
@@ -16,60 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      html{
-        font-size: 62.5%;
-      }
-      body {
-        padding: 1rem;
-        min-height: 100vh;
-        font-family: outfit;
-        font-size: 15px;
-        background-color: hsl(212, 45%, 89%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      }
-      article {
-        background-color: hsl(0, 0%, 100%);
-        text-align: center;
-        max-width: 27.5rem;
-        padding: 1.5rem;
-        border-radius: 10px;
-      }
-
-      img {
-        width: 100%;
-        border-radius: 10px;
-      }
-      section {
-        padding: 5px;
-      }
-      h2 {
-        color: hsl(218, 44%, 22%);
-        line-height: 1.2;
-      }
-      p {
-        color: hsl(216, 15%, 48%);
-        line-height: 1.5;
-      }
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    
   </head>
   <body>
     <main>
